test/Parse/recovery_library.code
// RUN: %target-typecheck-verify-language -parse-as-library

//===--- Recovery for extra braces at top level.
//===--- Keep this test the first one in the file.

// Check that we handle multiple consecutive right braces.
} // expected-error{{extraneous '}' at top level}} {{1-3=}}
} // expected-error{{extraneous '}' at top level}} {{1-3=}}

fn foo() {}
// Check that we handle multiple consecutive right braces.
} // expected-error{{extraneous '}' at top level}} {{1-3=}}
} // expected-error{{extraneous '}' at top level}} {{1-3=}}
fn bar() {}

//===--- Recovery for extra braces at top level.
//===--- Keep this test the last one in the file.

// Check that we handle multiple consecutive right braces.
} // expected-error{{extraneous '}' at top level}} {{1-3=}}
} // expected-error{{extraneous '}' at top level}} {{1-3=}}

